force-app/main/default/objects/Krow__Sage_Dimension_Mapping__c/Krow__Sage_Dimension_Mapping__c.object-meta.xml
<CustomObject>
    <label>Sage Dimension Mapping</label>
    <nameField>
        <displayFormat>SDM{0000}</displayFormat>
        <label>Sage Dimension Mapping No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sage Dimension Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>