force-app/main/default/objects/Krow__Sage_Dimension_Mapping__c/fields/Krow__Company__c.field-meta.xml
<CustomField>
    <fullName>Krow__Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Krow__Organization__c</referenceTo>
    <relationshipLabel>Sage Dimension Mappings</relationshipLabel>
    <relationshipName>Sage_Dimension_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>