force-app/main/default/objects/Krow__Sage_Dimension_Mapping__c/fields/Krow__Dimension__c.field-meta.xml
<CustomField>
    <fullName>Krow__Dimension__c</fullName>
    <label>Dimension</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>