force-app/main/default/objects/Krow__Sage_Dimension_Mapping__c/fields/Krow__Dimension_Id__c.field-meta.xml
<CustomField>
    <fullName>Krow__Dimension_Id__c</fullName>
    <label>Dimension Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>