force-app/main/default/objects/Krow__Sage_Dimension_Mapping__c/fields/Krow__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Krow__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>